--- a/saac/www/index.html
+++ b/saac/www/index.html
@@ -20,10 +20,13 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
+    <script src="js/stream.js"></script>
+    <script src="js/events.js"></script>
+    <script src="js/photo.js"></script>
+    <script src="js/leader.js"></script>
+    <script src="js/account.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="saac">
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
