--- a/saac/www/index.html
+++ b/saac/www/index.html
@@ -20,6 +20,7 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/config.js"></script>
     <script src="js/stream.js"></script>
     <script src="js/events.js"></script>
     <script src="js/photo.js"></script>
