adds native facebook login for ios

--- a/saac/www/index.html
+++ b/saac/www/index.html
@@ -26,6 +26,7 @@
     <script src="js/photo.js"></script>
     <script src="js/leader.js"></script>
     <script src="js/account.js"></script>
+    <script src="js/s3uploader.js"></script>
   </head>
   <body ng-app="saac">
     <!--
