--- a/saac/www/index.html
+++ b/saac/www/index.html
@@ -27,6 +27,8 @@
     <script src="js/leader.js"></script>
     <script src="js/account.js"></script>
     <script src="js/s3uploader.js"></script>
+    <script src="js/start.js"></script>
+
   </head>
   <body ng-app="saac">
     <!--
